--- a/src/locales/lang/zh.json
+++ b/src/locales/lang/zh.json
@@ -21,6 +21,7 @@
     "big":"大",
     "small":"小",
     "lucky":"幸运6",
+    "ludan":"路单修改",
     "zIns":"庄保险",
     "xIns":"闲保险",
     "tIns":"和保险",
