--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -69,9 +69,10 @@
   "Oprt": "Oprt",
   "Current-operator": "Current operator",
   "Switching-account": "Switching account",
-  "Station-number": "Station number",
-  "Boot-number": "Boot number",
-  "Game-number": "Game number",
+  "Station-number": "Table no.",
+  "Boot-number": "Boot no.",
+  "Game-number": "Game no.",
+  "Please-select": "Please select",
   "Total": "Total",
   "Chip": "Chip",
   "Cash": "Cash",
@@ -84,7 +85,7 @@
   "T-Ins": "T Ins",
   "T": "T",
   "S": "S",
-  "BIG": "B",
+  "BIG": "Big",
   "Lucky-6": "Lucky 6",
   "2-Cards": "2 Cards",
   "3-Cards": "3 Cards",
@@ -125,9 +126,9 @@
   "Win": "Win",
   "Game-Type": "Game Type",
   "Currency-Type": "Currency Type",
-  "bets-to-play": "Place your bets to play",
-  "Membership-Card-Number": "Membership Card Number",
-  "Betting-Time": "Betting Time",
+  "bets-to-play": "bets",
+  "Membership-Card-Number": "Card No.",
+  "Betting-Time": "Time",
   "Operator": "Operator",
   "Operation": "Operation",
   "Subtotal": "Subtotal",
@@ -145,6 +146,7 @@
   "Today": "Today",
   "Yesterday": "Yesterday",
   "This-Week": "This Week",
+  "Last-Week": "Last Week",
   "This-Month": "This Month",
   "Last-Month": "Last Month",
   "Filter-internal-card": "Filter internal card numbers",
@@ -157,7 +159,7 @@
   "Operation-Remarks": "Operation Remarks",
   "Time": "Time",
   "Chip-counting-modification": "Chip counting modification",
-  "Modification-time": "Modification time",
+  "Modification-time": "modify time",
   "Operated-by": "Operated by",
   "chip-in-the-system": "No.of chip in the system",
   "Manual-chip-counting": "Manual chip counting",
@@ -170,8 +172,8 @@
   "Cash-Receive": "Cash-Receive",
   "Insurance-Chip-Receive": "Insurance Chip-Receive",
   "Collection-Time": "Collection Time",
-  "Card-Cumulative-Win-Loss": "Card Number Cumulative Win/Loss",
-  "Cumulative-rolling-amount": "Cumulative rolling amount of card numbers",
+  "Card-Cumulative-Win-Loss": "Cumulative Win/Loss",
+  "Cumulative-rolling-amount": "Cumulative rolling amount",
   "Statistical-time": "Statistical time",
   "Tot-Win-Loss": "Tot Win/Loss",
   "Staff-Work-Number": "Staff Work Number",
@@ -185,6 +187,7 @@
   "Settlement-for-rolling-Fee": "Settlement for rolling Fee",
   "Actual-Settlement-for-rolling-fee": "Actual Settlement for rolling fee",
   "Cut-off-Date": "Cut-off Date",
+  "Cut-off-Time": "Cut-off Time",
   "Settlement-Date": "Settlement Date",
   "Operators": "Operators",
   "Chips-Movement-Records": "Chips Movement Records",
@@ -325,6 +328,7 @@
   "Mobile-P-No.": "Mobile P No.",
   "DOB": "D.O.B",
   "Date-created": "Date created",
+  "Date": "Date",
   "Home-pg": "Home pg",
   "Acc-Management": "Acc Management",
   "Bet-Slip-Management": "Bet Slip Management",
@@ -348,6 +352,7 @@
   "No-changes-have-been-made-this-time": "No changes have been made this time",
   "Please-enter-the-complete-order-data": "Please enter the complete order data",
   "Order-amended-successfully": "Order amended successfully",
+  "Order-supplemented-successfully": "Order supplemented successfully",
   "Point-chips-modification-successful": "Point chips modification successful",
   "Point-chips-calculation-gap-successful": "Point chips calculation gap successful",
   "List-of-betting-records": "List of betting records",
@@ -440,5 +445,21 @@
   "Receipt-code-modified-successfully": "Receipt code modified successfully",
   "Receipt-code-calculation-gap-successful": "Receipt code calculation gap successful",
   "sure-switch-accounts": "Are you sure you want to switch accounts?",
-  "Sure-entry": "Are you sure about the entry?"
+  "Sure-entry": "Are you sure about the entry?",
+  "start-time":"Start",
+  "end-time":"End",
+  "repair":"repair",
+  "currency":"currency",
+  "bet-money":"Money",
+  "select-b-p-t":"Please select B/P/T",
+  "last-modify":"latest modify time",
+  "time-range":"Time Range",
+  "Insurance-Chip-Increase-sub": "Insurance Chip Increase Sub",
+  "operation-time":"operation time",
+  "chip-win-loss":"Chip Win/Loss",
+  "cash-win-loss":"Cash Win/Loss",
+  "currency-Type": "currency",
+  "settlement-time": "settlement time",
+  "no-data": "No Data"
+
 }
