--- a/src/locales/lang/zh.json
+++ b/src/locales/lang/zh.json
@@ -71,7 +71,7 @@
     "sucPoint":"点码修改成功",
     "sucGetCount":"收码计算差距成功",
     "sucPointCount":"点码计算差距成功"
-  },  
+  },
   "Card-search": "卡号查询",
   "Name-search": "姓名查询",
   "Phone-search": "电话号码查询",
@@ -144,6 +144,7 @@
   "Station-number": "台号",
   "Boot-number": "靴号",
   "Game-number": "局号",
+  "Please-select": "请选择",
   "Total": "累计",
   "Chip": "筹码",
   "Cash": "现金",
@@ -217,6 +218,7 @@
   "Today": "今日",
   "Yesterday": "昨日",
   "This-Week": "本周",
+  "Last-Week": "上周",
   "This-Month": "本月",
   "Last-Month": "上月",
   "Filter-internal-card": "过滤内部卡号",
@@ -242,8 +244,8 @@
   "Cash-Receive": "现金-收",
   "Insurance-Chip-Receive": "保险筹码-收",
   "Collection-Time": "收码时间",
-  "Card-Cumulative-Win-Loss": "卡号累计输赢",
-  "Cumulative-rolling-amount": "卡号洗码量累计",
+  "Card-Cumulative-Win-Loss": "累计输赢",
+  "Cumulative-rolling-amount": "累计洗码量",
   "Statistical-time": "统计时间",
   "Tot-Win-Loss": "合计输赢",
   "Staff-Work-Number": "员工工号",
@@ -257,6 +259,7 @@
   "Settlement-for-rolling-Fee": "应结算洗码费",
   "Actual-Settlement-for-rolling-fee": "实际结算洗码费",
   "Cut-off-Date": "截止日期",
+  "Cut-off-Time": "截止时间",
   "Settlement-Date": "结算日期",
   "Operators": "操作员",
   "Chips-Movement-Records": "筹码变动记录",
@@ -335,7 +338,7 @@
   "1x": "1赔",
   "Lucky-2-cards": "幸运6(2张牌)",
   "B-Win": "庄赢",
-  "Lucky-3-cards": "幸运6(3张牌): ",
+  "Lucky-3-cards": "幸运6(3张牌)",
   "P-wins": "闲  赢",
   "Over": "大:",
   "T-Win": "和赢",
@@ -397,6 +400,7 @@
   "Mobile-P-No.": "手机号码",
   "DOB": "生日",
   "Date-created": "创建日期",
+  "Date": "日期",
   "Home-pg": "首页",
   "Acc-Management": "账号管理",
   "Bet-Slip-Management": "注单管理",
@@ -420,6 +424,7 @@
   "No-changes-have-been-made-this-time": "本次未做任何修改",
   "Please-enter-the-complete-order-data": "请录入完整注单数据",
   "Order-amended-successfully": "注单修改成功",
+  "Order-supplemented-successfully": "注单补录成功",
   "Point-chips-modification-successful": "点码修改成功",
   "Point-chips-calculation-gap-successful": "点码计算差距成功",
   "List-of-betting-records": "注单记录列表",
@@ -512,5 +517,21 @@
   "Receipt-code-modified-successfully": "收码修改成功",
   "Receipt-code-calculation-gap-successful": "收码计算差距成功",
   "sure-switch-accounts": "确定切换账号吗？",
-  "Sure-entry": "是否确定录入？"
+  "Sure-entry": "是否确定录入？",
+  "start-time":"开始日期",
+  "end-time":"结束日期",
+  "repair":"补录",
+  "currency":"币种",
+  "bet-money":"下注金额",
+  "select-b-p-t":"请选择庄/闲/和",
+  "last-modify":"最近修改时间",
+  "time-range":"时间范围",
+  "Insurance-Chip-Increase-sub": "保险筹码增减",
+  "operation-time":"操作时间",
+  "chip-win-loss":"筹码输赢",
+  "cash-win-loss":"现金输赢",
+  "currency-Type": "货币类型",
+  "settlement-time": "结算时间",
+  "no-data": "暂无数据"
+
 }
