--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -1,82 +1,82 @@
 {
-  "persino-info":"Info",
-  "bet":{
-    "user":"Operator",
-    "changeAccount":"Switching account",
-    "noScreen":"Uncast",
-    "onScreen":"Cast",
-    "betRecord":"Betting record",
-    "taiHao":"Station number",
-    "xueHao":"Boot number",
-    "juHao":"Game number",
-    "leiji":"Total",
-    "chip":"Chip",
-    "cash":"Cash",
-    "ins":"Ins",
-    "z":"B",
-    "x":"P",
-    "h":"T",
-    "zd":"B T",
-    "xd":"P P",
-    "big":"Big",
-    "small":"S",
-    "lucky":"Lucky 6",
-    "ludan":"Roadmap modification",
-    "zIns":"B Ins",
-    "xIns":"P Ins",
-    "tIns":"T Ins",
-    "open":"Op Card",
-    "input":"Rec",
-    "ponintCode":"Point code",
-    "getCode":"Code receipt",
-    "sure":"Ok",
-    "cancel":"Cancel",
-    "payOut":"Payouts",
-    "two":"2 Cards",
-    "three":"3 Cards",
-    "ischange":"Are you sure you want to switch accounts?",
-    "tips":"Prompt",
-    "chooseResult":"Please select the prize result",
-    "isChoose":"Please check if the currency is not checked",
-    "ishas":"Please check if you have missed the test number",
-    "sureAdd":"Are you sure about the entry?",
-    "heji":"Tot",
-    "xiaoji":"Subtotal",
-    "tips1":"Roadmap modified successfully",
-    "face":"Face Val",
-    "vol":"Vol",
-    "type":"Type",
-    "account":"Amount",
-    "status":"Status",
-    "chipIncrease":"Chip increase",
-    "chipReduce":"Chip reduce",
-    "cashIncrease":"Cash increase",
-    "cashReduce":"Cash reduce",
-    "chipgap":"Chip Gap",
-    "correct":"Correct",
-    "incorrect":"Incorrect",
-    "cashGap":"Cash Gap",
-    "totGap":"Tot Gap",
-    "insChip":"Insurance Chip",
-    "insChipAdd":"Ins Chip Increase",
-    "insChipSub":"Ins Chip Reduce",
-    "insGap":"Ins Chip Gap",
-    "chipGet":"Chip collection",
-    "cashGet":"Cash collection",
-    "remark":"Comments on changes to increase/reduce chip:",
-    "conChange":"Confirmation of changes",
-    "calculateGap":"Calculate the gap",
-    "ismodiffy":"Are you sure modify?",
-    "sucGet":"Receipt code modified successfully",
-    "sucPoint":"Point chips modification successful",
-    "sucGetCount":"Receipt code calculation gap successful",
-    "sucPointCount":"Point chips calculation gap successful",
-    "chooseStyle":"Currency",
-    "wan":"W",
+  "persino-info": "Info",
+  "bet": {
+    "user": "Operator",
+    "changeAccount": "Switching account",
+    "noScreen": "Uncast",
+    "onScreen": "Cast",
+    "betRecord": "Betting record",
+    "taiHao": "Station number",
+    "xueHao": "Boot number",
+    "juHao": "Game number",
+    "leiji": "Total",
+    "chip": "Chip",
+    "cash": "Cash",
+    "ins": "Ins",
+    "z": "B",
+    "x": "P",
+    "h": "T",
+    "zd": "B T",
+    "xd": "P P",
+    "big": "Big",
+    "small": "S",
+    "lucky": "Lucky 6",
+    "ludan": "Roadmap modification",
+    "zIns": "B Ins",
+    "xIns": "P Ins",
+    "tIns": "T Ins",
+    "open": "Op Card",
+    "input": "Rec",
+    "ponintCode": "Point code",
+    "getCode": "Code receipt",
+    "sure": "Ok",
+    "cancel": "Cancel",
+    "payOut": "Payouts",
+    "two": "2 Cards",
+    "three": "3 Cards",
+    "ischange": "Are you sure you want to switch accounts?",
+    "tips": "Prompt",
+    "chooseResult": "Please select the prize result",
+    "isChoose": "Please check if the currency is not checked",
+    "ishas": "Please check if you have missed the test number",
+    "sureAdd": "Are you sure about the entry?",
+    "heji": "Tot",
+    "xiaoji": "Subtotal",
+    "tips1": "Roadmap modified successfully",
+    "face": "Face Val",
+    "vol": "Vol",
+    "type": "Type",
+    "account": "Amount",
+    "status": "Status",
+    "chipIncrease": "Chip increase",
+    "chipReduce": "Chip reduce",
+    "cashIncrease": "Cash increase",
+    "cashReduce": "Cash reduce",
+    "chipgap": "Chip Gap",
+    "correct": "Correct",
+    "incorrect": "Incorrect",
+    "cashGap": "Cash Gap",
+    "totGap": "Tot Gap",
+    "insChip": "Insurance Chip",
+    "insChipAdd": "Ins Chip Increase",
+    "insChipSub": "Ins Chip Reduce",
+    "insGap": "Ins Chip Gap",
+    "chipGet": "Chip collection",
+    "cashGet": "Cash collection",
+    "remark": "Comments on changes to increase/reduce chip:",
+    "conChange": "Confirmation of changes",
+    "calculateGap": "Calculate the gap",
+    "ismodiffy": "Are you sure modify?",
+    "sucGet": "Receipt code modified successfully",
+    "sucPoint": "Point chips modification successful",
+    "sucGetCount": "Receipt code calculation gap successful",
+    "sucPointCount": "Point chips calculation gap successful",
+    "chooseStyle": "Currency",
+    "wan": "W",
     "T-money": "T money",
-    "fullScreen":"Full screen",
-    "choose":"Please choose"
-  }, 
+    "fullScreen": "Full screen",
+    "choose": "Please choose"
+  },
   "Card-search": "C No.",
   "Name-search": "Name",
   "Phone-search": "P No.",
@@ -523,20 +523,24 @@
   "Receipt-code-calculation-gap-successful": "Receipt code calculation gap successful",
   "sure-switch-accounts": "Are you sure you want to switch accounts?",
   "Sure-entry": "Are you sure about the entry?",
-  "start-time":"Start",
-  "end-time":"End",
-  "repair":"repair",
-  "currency":"currency",
-  "bet-money":"Money",
-  "select-b-p-t":"Please select B/P/T",
-  "last-modify":"latest modify time",
-  "time-range":"Time Range",
+  "start-time": "Start",
+  "end-time": "End",
+  "repair": "repair",
+  "currency": "currency",
+  "bet-money": "Money",
+  "select-b-p-t": "Please select B/P/T",
+  "last-modify": "latest modify time",
+  "time-range": "Time Range",
   "Insurance-Chip-Increase-sub": "Insurance Chip Increase Sub",
-  "operation-time":"operation time",
-  "chip-win-loss":"Chip Win/Loss",
-  "cash-win-loss":"Cash Win/Loss",
+  "operation-time": "operation time",
+  "chip-win-loss": "Chip Win/Loss",
+  "cash-win-loss": "Cash Win/Loss",
   "currency-Type": "currency",
   "settlement-time": "settlement time",
-  "no-data": "No Data"
-
+  "no-data": "No Data",
+  "bulk-settlement": "Bulk settlement",
+  "card-deactivated": "This card is deactivated",
+  "card-counts": "card amounts",
+  "Yes": "Yes",
+  "No": "No"
 }
