--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -117,13 +117,15 @@
   "is-remit": "Whether to remit",
   "main-number": "Tot Main C No.",
   "sub-number": "Tot sub-card No.",
+  "main-card": "Main C No.",
+  "sub-card": "sub-card No.",
   "card-number": "C No.",
   "Phone-number": "P No.",
   "Password": "Password",
   "Confirm-Password": "Confirm Password",
   "Deposit": "Deposit",
   "Shr": "Shr %",
-  "rebate-Percentage": " %ate Percentage",
+  "rebate-Percentage": "rebate Percentage",
   "New-card-no": "New C No.",
   "Add-new-sub": "Add a new sub-card number",
   "Card-Amendment": "C No.Amendment",
@@ -141,6 +143,8 @@
   "Job-Search": "Job No.Search",
   "Name-Search": "Name Search",
   "Add-new-role": "Add a new role",
+  "Add-new-employee": "Add a new employee",
+  "Edit-employee": "Edit employee",
   "Role": "Role",
   "Description": "Description",
   "Oprt": "Oprt",
@@ -457,6 +461,7 @@
   "Remittance-Successful": "Remittance Successful",
   "Rolling-Settlement-successful": "Rolling Settlement successful",
   "Card-No-cannot-be-empty": "Card No.cannot be empty",
+  "user-name-cannot-be-empty": "User Name cannot be empty",
   "Game-No-cannot-be-empty": "Game No.cannot be empty",
   "Please-select-a-currency": "Please select a currency",
   "Please-enter-at-least-one-deposit-amount": "Please enter at least one deposit amount",
@@ -512,7 +517,7 @@
   "Please-select-the-role-of-authority": "Please select the role of authority",
   "Please-select-a-start-date": "Please select a start date",
   "Role-cannot-be-empty": "Role cannot be empty",
-  "confirmed-delete-employee": "Is it confirmed that the employee with the job number *** is deleted?",
+  "confirmed-delete-employee": "Confirmed delete the employee:",
   "Confirm-deletion-of-the-card-number": "Confirm deletion of the card number",
   "Please-enter-the-correct-IP-address": "Please enter the correct IP address",
   "Please-select-the-prize-result": "Please select the prize result",
@@ -542,5 +547,11 @@
   "card-deactivated": "This card is deactivated",
   "card-counts": "card amounts",
   "Yes": "Yes",
-  "No": "No"
+  "No": "No",
+  "enter-card-number":"Please enter card No.",
+  "enter-phone-number":"Please enter phone number",
+  "male":"Male",
+  "female":"Female",
+  "master-card":"Main Card",
+  "child-card":"Sub Card"
 }
