--- a/src/locales/lang/zh.json
+++ b/src/locales/lang/zh.json
@@ -143,6 +143,7 @@
   "Job-Search": "工号查询",
   "Name-Search": "姓名查询",
   "Add-new-role": "新增角色",
+  "Edit-role": "角色修改",
   "Add-new-employee": "新增员工",
   "Edit-employee": "新增员工",
   "Role": "角色",
@@ -348,7 +349,7 @@
   "Lucky-2-cards": "幸运6(2张牌)",
   "B-Win": "庄赢",
   "Lucky-3-cards": "幸运6(3张牌)",
-  "P-wins": "闲  赢",
+  "P-wins": "闲赢",
   "Over": "大:",
   "T-Win": "和赢",
   "Under": "小",
@@ -371,6 +372,7 @@
   "Save-Settings": "保存设置",
   "Add-New": "新增",
   "Add-a-new-table": "新增桌台",
+  "Edit-table": "编辑桌台",
   "T-No": "桌台编号",
   "Please-enter-a-T-No": "请输入桌台编号",
   "Game-type": "游戏类型",
@@ -553,6 +555,20 @@
   "male":"男",
   "female":"女",
   "master-card":"主卡",
-  "child-card":"子卡"
+  "child-card":"子卡",
+  "enter-name":"请输入姓名",
+  "enter-deposit":"请输入押金",
+  "enter-fee":"请输入补卡费",
+  "enter-rebate":"请输入返点比例",
+  "enter-shr":"请输入占股比例",
+  "enter-pwd":"请输入密码",
+  "confirm-pwd":"请确认密码",
+  "enter-work-no":"请输入工号",
+  "enter-contact":"请输入联系方式",
+  "enter-origin":"请输入籍贯",
+  "enter-position":"请输入职位",
+  "menu-permissions":"菜单权限",
+  "expand-collapse":"展开/折叠",
+  "all-none":"全选/全不选"
 
 }
