--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -95,7 +95,7 @@
   "Name": "Name",
   "phone-number": "P No.",
   "Staus": "Sta",
-  "Card-Type": "C Typ",
+  "Card-Type": "C Type",
   "Int-card": "Int C No.or not",
   "Gender": "Gender",
   "Acc-holder": "Acc holder",
@@ -111,10 +111,14 @@
   "Baccarat-rolling-Ratio-Chip": "Baccarat rolling Ratio (Chip)",
   "DT-rolling-percentage-chip": "DT rolling percentage (chip)",
   "DT-rolling-percentage-cash": "DT rolling percentage (cash)",
-  "Whether-have-commission": "Whether have commission",
-  "is-cash-out": "Whether cash out is available",
-  "is-settle": "Whether or not to settle the rolling",
-  "is-remit": "Whether to remit",
+  "Whether-have-commission2": "Whether have commission",
+  "is-cash-out2": "Whether cash out is available",
+  "is-settle2": "Whether or not to settle the rolling",
+  "is-remit2": "Whether to remit",
+  "Whether-have-commission": "have commission",
+  "is-cash-out": "cash out",
+  "is-settle": "settle rolling",
+  "is-remit": "remit",
   "main-number": "Tot Main C No.",
   "sub-number": "Tot sub-card No.",
   "main-card": "Main C No.",
@@ -122,10 +126,10 @@
   "card-number": "C No.",
   "Phone-number": "P No.",
   "Password": "Password",
-  "Confirm-Password": "Confirm Password",
+  "Confirm-Password": "Confirm Pwd",
   "Deposit": "Deposit",
   "Shr": "Shr %",
-  "rebate-Percentage": "rebate Percentage",
+  "rebate-Percentage": "rebate",
   "New-card-no": "New C No.",
   "Add-new-sub": "Add a new sub-card number",
   "Card-Amendment": "C No.Amendment",
@@ -361,10 +365,10 @@
   "Baccarat-Rolling-Ratio-S-Cash": "Baccarat Rolling Ratio ($Cash)",
   "DT-Rolling-Ratio-S-Chip": "DT Rolling Ratio ($Chip)",
   "DT-Rolling-Ratio-S-Cash": "DT Rolling Ratio ($Cash)",
-  "Baccarat-rolling-percentage-B-chip": "Baccarat rolling percentage (฿ chip)",
+  "Baccarat-rolling-percentage-B-chip": "Baccarat rolling(฿ chip)",
   "Baccarat-Rolling-Ratio-B-cash": "Baccarat Rolling Ratio (฿ cash)",
-  "DT-Rolling-Ratio-B-chip": "DT Rolling Ratio (฿ chip)",
-  "DT-Rollingh-Ratio-B-cash": "DT Rollingh Ratio (฿ cash)",
+  "DT-Rolling-Ratio-B-chip": "DT Rolling Ratio(฿ chip)",
+  "DT-Rollingh-Ratio-B-cash": "DT Rollingh Ratio(฿ cash)",
   "Other-Conf": "Other Conf",
   "Rolling-Commission-rounding": "Rolling Commission rounding",
   "B-win-comm-rounding": "B win comm rounding",
