--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -1,78 +1,79 @@
 {
-  "persino-info":"Info",
-  "bet":{
-    "user":"Operator",
-    "changeAccount":"Switching account",
-    "noScreen":"Uncast",
-    "onScreen":"Cast",
-    "betRecord":"Betting record",
-    "taiHao":"Station number",
-    "xueHao":"Boot number",
-    "juHao":"Game number",
-    "leiji":"Total",
-    "chip":"Chip",
-    "cash":"Cash",
-    "ins":"Ins",
-    "z":"B",
-    "x":"P",
-    "h":"T",
-    "zd":"B P",
-    "xd":"P P",
-    "big":"Big",
-    "small":"S",
-    "lucky":"Lucky 6",
-    "ludan":"Roadmap modification",
-    "zIns":"B Ins",
-    "xIns":"P Ins",
-    "tIns":"T Ins",
-    "open":"Op Card",
-    "input":"Rec",
-    "ponintCode":"Point code",
-    "getCode":"Code receipt",
-    "sure":"Ok",
-    "cancel":"Cancel",
-    "payOut":"Payouts",
-    "two":"2 Cards",
-    "three":"3 Cards",
-    "ischange":"Are you sure you want to switch accounts?",
-    "tips":"Prompt",
-    "chooseResult":"Please select the prize result",
-    "isChoose":"Please check if the currency is not checked",
-    "ishas":"Please check if you have missed the test number",
-    "sureAdd":"Are you sure about the entry?",
-    "heji":"Tot",
-    "xiaoji":"Subtotal",
-    "tips1":"Roadmap modified successfully",
-    "face":"Face Val",
-    "vol":"Vol",
-    "type":"Type",
-    "account":"Amount",
-    "status":"Status",
-    "chipIncrease":"Chip increase",
-    "chipReduce":"Chip reduce",
-    "cashIncrease":"Cash increase",
-    "cashReduce":"Cash reduce",
-    "chipgap":"Chip Gap",
-    "correct":"Correct",
-    "incorrect":"Incorrect",
-    "cashGap":"Cash Gap",
-    "totGap":"Tot Gap",
-    "insChip":"Insurance Chip",
-    "insChipAdd":"Ins Chip Increase",
-    "insChipSub":"Ins Chip Reduce",
-    "insGap":"Ins Chip Gap",
-    "chipGet":"Chip collection",
-    "cashGet":"Cash collection",
-    "remark":"Addition/subtraction code modification remarks:",
-    "conChange":"Confirmation of changes",
-    "calculateGap":"Calculate the gap",
-    "ismodiffy":"Are you sure modify?",
-    "sucGet":"Receipt code modified successfully",
-    "sucPoint":"Point chips modification successful",
-    "sucGetCount":"Receipt code calculation gap successful",
-    "sucPointCount":"Point chips calculation gap successful",
-    "chooseStyle":"Currency",
-    "wan":"W",
+
+  "persino-info": "Info",
+  "bet": {
+    "user": "Operator",
+    "changeAccount": "Switching account",
+    "noScreen": "Uncast",
+    "onScreen": "Cast",
+    "betRecord": "Betting record",
+    "taiHao": "Station number",
+    "xueHao": "Boot number",
+    "juHao": "Game number",
+    "leiji": "Total",
+    "chip": "Chip",
+    "cash": "Cash",
+    "ins": "Ins",
+    "z": "B",
+    "x": "P",
+    "h": "T",
+    "zd": "B P",
+    "xd": "P P",
+    "big": "Big",
+    "small": "S",
+    "lucky": "Lucky 6",
+    "ludan": "Roadmap modification",
+    "zIns": "B Ins",
+    "xIns": "P Ins",
+    "tIns": "T Ins",
+    "open": "Op Card",
+    "input": "Rec",
+    "ponintCode": "Point code",
+    "getCode": "Code receipt",
+    "sure": "Ok",
+    "cancel": "Cancel",
+    "payOut": "Payouts",
+    "two": "2 Cards",
+    "three": "3 Cards",
+    "ischange": "Are you sure you want to switch accounts?",
+    "tips": "Prompt",
+    "chooseResult": "Please select the prize result",
+    "isChoose": "Please check if the currency is not checked",
+    "ishas": "Please check if you have missed the test number",
+    "sureAdd": "Are you sure about the entry?",
+    "heji": "Tot",
+    "xiaoji": "Subtotal",
+    "tips1": "Roadmap modified successfully",
+    "face": "Face Val",
+    "vol": "Vol",
+    "type": "Type",
+    "account": "Amount",
+    "status": "Status",
+    "chipIncrease": "Chip increase",
+    "chipReduce": "Chip reduce",
+    "cashIncrease": "Cash increase",
+    "cashReduce": "Cash reduce",
+    "chipgap": "Chip Gap",
+    "correct": "Correct",
+    "incorrect": "Incorrect",
+    "cashGap": "Cash Gap",
+    "totGap": "Tot Gap",
+    "insChip": "Insurance Chip",
+    "insChipAdd": "Ins Chip Increase",
+    "insChipSub": "Ins Chip Reduce",
+    "insGap": "Ins Chip Gap",
+    "chipGet": "Chip collection",
+    "cashGet": "Cash collection",
+    "remark": "Addition/subtraction code modification remarks:",
+    "conChange": "Confirmation of changes",
+    "calculateGap": "Calculate the gap",
+    "ismodiffy": "Are you sure modify?",
+    "sucGet": "Receipt code modified successfully",
+    "sucPoint": "Point chips modification successful",
+    "sucGetCount": "Receipt code calculation gap successful",
+    "sucPointCount": "Point chips calculation gap successful",
+    "chooseStyle": "Currency",
+    "wan": "W",
     "T-money": "T money",
     "fullScreen": "Full screen",
     "choose": "Please choose"
@@ -158,7 +159,7 @@
   "Station-number": "Table no.",
   "Boot-number": "Boot no.",
   "Game-number": "Game no.",
-  "Please-select": "Please select",
+  "Please-select": "select",
   "Total": "Total",
   "Chip": "Chip",
   "Cash": "Cash",
@@ -238,10 +239,10 @@
   "Filter-internal-card": "Filter internal card numbers",
   "Include-sub": "Include sub-card numbers",
   "Chip-counting-time": "Chip counting time",
-  "system-chip-counts": "No.of system chip counts",
-  "manual-chip-counts": "No.of manual chip counts",
-  "insurance-system-chip-counts": "No.of insurance system chip counts",
-  "manual-insurance-chip-counts": "No.of manual insurance chip counts",
+  "system-chip-counts": "system chip counts",
+  "manual-chip-counts": "manual chip counts",
+  "insurance-system-chip-counts": "insurance system chip counts",
+  "manual-insurance-chip-counts": "manual insurance chip counts",
   "Operation-Remarks": "Operation Remarks",
   "Time": "Time",
   "Chip-counting-modification": "Chip counting modification",
@@ -554,36 +555,36 @@
   "card-counts": "card amounts",
   "Yes": "Yes",
   "No": "No",
-  "sys_tips_title1":"Tips",
-  "sys_tips_cnt1":"Your login status has expired, you can stay on this page or log in again",
-  "relogin":"Login again",
-  "sys_tips_cnt2":"Data is being processed, please do not resubmit",
-  "sys_tips_cnt3":"Invalid session, or session has expired, please log in again.",
-  "sys_tips_cnt4":"Backend interface connection exception",
-  "sys_tips_cnt5":"System interface request timeout",
-  "sys_tips_cnt6":"System interface",
-  "sys_tips_cnt7":"abnormal",
-  "sys_tips_cnt8":"Downloading data, please wait",
-  "sys_tips_cnt9":"There was an error downloading the file, please contact the administrator!",
-  "enter-card-number":"Please enter card No.",
-  "enter-phone-number":"Please enter phone number",
-  "male":"Male",
-  "female":"Female",
-  "master-card":"Main Card",
-  "child-card":"Sub Card",
-  "enter-name":"Please enter name",
-  "enter-deposit":"Please enter deposit",
-  "enter-fee":"Please enter Rep-C-Fee",
-  "enter-rebate":"Please enter rebate",
-  "enter-shr":"Please enter shr ratio",
-  "enter-pwd":"Please enter password",
-  "confirm-pwd":"Please confirm password",
-  "enter-work-no":"Please enter work No.",
-  "enter-contact":"Please enter contact",
-  "enter-origin":"Please enter origin",
-  "enter-position":"Please enter position",
-  "enter-role":"Please enter role",
-  "menu-permissions":"menu permissions",
-  "expand-collapse":"expand/collapse",
-  "all-none":"All/None"
+  "sys_tips_title1": "Tips",
+  "sys_tips_cnt1": "Your login status has expired, you can stay on this page or log in again",
+  "relogin": "Login again",
+  "sys_tips_cnt2": "Data is being processed, please do not resubmit",
+  "sys_tips_cnt3": "Invalid session, or session has expired, please log in again.",
+  "sys_tips_cnt4": "Backend interface connection exception",
+  "sys_tips_cnt5": "System interface request timeout",
+  "sys_tips_cnt6": "System interface",
+  "sys_tips_cnt7": "abnormal",
+  "sys_tips_cnt8": "Downloading data, please wait",
+  "sys_tips_cnt9": "There was an error downloading the file, please contact the administrator!",
+  "enter-card-number": "Please enter card No.",
+  "enter-phone-number": "Please enter phone number",
+  "male": "Male",
+  "female": "Female",
+  "master-card": "Main Card",
+  "child-card": "Sub Card",
+  "enter-name": "Please enter name",
+  "enter-deposit": "Please enter deposit",
+  "enter-fee": "Please enter Rep-C-Fee",
+  "enter-rebate": "Please enter rebate",
+  "enter-shr": "Please enter shr ratio",
+  "enter-pwd": "Please enter password",
+  "confirm-pwd": "Please confirm password",
+  "enter-work-no": "Please enter work No.",
+  "enter-contact": "Please enter contact",
+  "enter-origin": "Please enter origin",
+  "enter-position": "Please enter position",
+  "enter-role": "Please enter role",
+  "menu-permissions": "menu permissions",
+  "expand-collapse": "expand/collapse",
+  "all-none": "All/None"
 }
