--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -157,9 +157,9 @@
   "Oprt": "Oprt",
   "Current-operator": "Current operator",
   "Switching-account": "Switching account",
-  "Station-number": "Table no.",
-  "Boot-number": "Boot no.",
-  "Game-number": "Game no.",
+  "Station-number": "Table No.",
+  "Boot-number": "Boot No.",
+  "Game-number": "Game No.",
   "Please-select": "select",
   "Total": "Total",
   "Chip": "Chip",
