--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -270,10 +270,10 @@
   "Number-of-entries": "Number of entries",
   "Number-of-errors": "Number of errors",
   "Error-rate": "Error rate",
-  "Settlement-for-Currency": "Settlement for Currency",
-  "Settlement-for-rolling-amount": "Settlement for rolling amount",
-  "Settlement-for-rolling-Fee": "Settlement for rolling Fee",
-  "Actual-Settlement-for-rolling-fee": "Actual Settlement for rolling fee",
+  "Settlement-for-Currency": "Settlement Currency",
+  "Settlement-for-rolling-amount": "Settlement Rolling Amount",
+  "Settlement-for-rolling-Fee": "Settlement Rolling Fee",
+  "Actual-Settlement-for-rolling-fee": "Actual Settlement Rolling fee",
   "Cut-off-Date": "Cut-off Date",
   "Cut-off-Time": "Cut-off Time",
   "Settlement-Date": "Settlement Date",
@@ -539,17 +539,17 @@
   "start-time": "Start",
   "end-time": "End",
   "repair": "repair",
-  "currency": "currency",
+  "currency": "Currency",
   "bet-money": "Money",
   "select-b-p-t": "Please select B/P/T",
   "last-modify": "latest modify time",
   "time-range": "Time Range",
   "Insurance-Chip-Increase-sub": "Insurance Chip Increase Sub",
-  "operation-time": "operation time",
+  "operation-time": "Operation Time",
   "chip-win-loss": "Chip Win/Loss",
   "cash-win-loss": "Cash Win/Loss",
   "currency-Type": "currency",
-  "settlement-time": "settlement time",
+  "settlement-time": "Settlement Time",
   "no-data": "No Data",
   "bulk-settlement": "Bulk settlement",
   "card-deactivated": "This card is deactivated",
