--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -308,7 +308,7 @@
   "Buy-chip-for-cash": "Buy chip for cash",
   "Remittance": "Remittance",
   "Include-sub-card-number": "Include sub-card number",
-  "Unsettled-rolling-volume": "Unsettled rolling volume",
+  "Unsettled-rolling-volume": "Unsettled rolling",
   "Unsettled-rolling-fee": "Unsettled rolling fee",
   "Settlement": "Settlement",
   "Breakdown": "Breakdown",
