--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -247,7 +247,7 @@
   "Operation-Remarks": "Operation Remarks",
   "Time": "Time",
   "Chip-counting-modification": "Chip counting modification",
-  "Modification-time": "modify time",
+  "Modification-time": "Modify Time",
   "Operated-by": "Operated by",
   "chip-in-the-system": "No.of chip in the system",
   "Manual-chip-counting": "Manual chip counting",
