--- a/src/locales/lang/zh.json
+++ b/src/locales/lang/zh.json
@@ -583,5 +583,6 @@
   "enter-position": "请输入职位",
   "menu-permissions": "菜单权限",
   "expand-collapse": "展开/折叠",
-  "all-none": "全选/全不选"
+  "all-none": "全选/全不选",
+  "game-num-range": "局号必须大于0"
 }
