荷官上下水

--- a/src/locales/lang/en.json
+++ b/src/locales/lang/en.json
@@ -1,80 +1,80 @@
 {
-  "persino-info":"Info",
-  "bet":{
-    "next":"Next game",
-    "user":"Operator",
-    "changeAccount":"Switching account",
-    "noScreen":"Uncast",
-    "onScreen":"Cast",
-    "betRecord":"Betting record",
-    "taiHao":"Station number",
-    "xueHao":"Boot number",
-    "juHao":"Game number",
-    "leiji":"Total",
-    "chip":"Chip",
-    "cash":"Cash",
-    "ins":"Ins",
-    "z":"B",
-    "x":"P",
-    "h":"T",
-    "zd":"B P",
-    "xd":"P P",
-    "big":"Big",
-    "small":"S",
-    "lucky":"Lucky 6",
-    "ludan":"Roadmap modification",
-    "zIns":"B Ins",
-    "xIns":"P Ins",
-    "tIns":"T Ins",
-    "open":"Op Card",
-    "input":"Rec",
-    "ponintCode":"Point code",
-    "getCode":"Code receipt",
-    "sure":"Ok",
-    "cancel":"Cancel",
-    "payOut":"Payouts",
-    "two":"2 Cards",
-    "three":"3 Cards",
-    "ischange":"Are you sure you want to switch accounts?",
-    "tips":"Prompt",
-    "chooseResult":"Please select the prize result",
-    "isChoose":"Please check if the currency is not checked",
-    "ishas":"Please check if you have missed the test number",
-    "sureAdd":"Are you sure about the entry?",
-    "sureNext":"Are you sure about the entry next game?",
-    "heji":"Tot",
-    "xiaoji":"Subtotal",
-    "tips1":"Roadmap modified successfully",
-    "face":"Face Val",
-    "vol":"Vol",
-    "type":"Type",
-    "account":"Amount",
-    "status":"Status",
-    "chipIncrease":"Chip increase",
-    "chipReduce":"Chip reduce",
-    "cashIncrease":"Cash increase",
-    "cashReduce":"Cash reduce",
-    "chipgap":"Chip Gap",
-    "correct":"Correct",
-    "incorrect":"Incorrect",
-    "cashGap":"Cash Gap",
-    "totGap":"Tot Gap",
-    "insChip":"Insurance Chip",
-    "insChipAdd":"Ins Chip Increase",
-    "insChipSub":"Ins Chip Reduce",
-    "insGap":"Ins Chip Gap",
-    "chipGet":"Chip collection",
-    "cashGet":"Cash collection",
-    "remark":"Addition/subtraction code modification remarks:",
-    "conChange":"Confirmation of changes",
-    "calculateGap":"Calculate the gap",
-    "ismodiffy":"Are you sure modify?",
-    "sucGet":"Receipt code modified successfully",
-    "sucPoint":"Point chips modification successful",
-    "sucGetCount":"Receipt code calculation gap successful",
-    "sucPointCount":"Point chips calculation gap successful",
-    "chooseStyle":"Currency",
-    "wan":"W",
+  "persino-info": "Info",
+  "bet": {
+    "next": "Next game",
+    "user": "Operator",
+    "changeAccount": "Switching account",
+    "noScreen": "Uncast",
+    "onScreen": "Cast",
+    "betRecord": "Betting record",
+    "taiHao": "Station number",
+    "xueHao": "Boot number",
+    "juHao": "Game number",
+    "leiji": "Total",
+    "chip": "Chip",
+    "cash": "Cash",
+    "ins": "Ins",
+    "z": "B",
+    "x": "P",
+    "h": "T",
+    "zd": "B P",
+    "xd": "P P",
+    "big": "Big",
+    "small": "S",
+    "lucky": "Lucky 6",
+    "ludan": "Roadmap modification",
+    "zIns": "B Ins",
+    "xIns": "P Ins",
+    "tIns": "T Ins",
+    "open": "Op Card",
+    "input": "Rec",
+    "ponintCode": "Point code",
+    "getCode": "Code receipt",
+    "sure": "Ok",
+    "cancel": "Cancel",
+    "payOut": "Payouts",
+    "two": "2 Cards",
+    "three": "3 Cards",
+    "ischange": "Are you sure you want to switch accounts?",
+    "tips": "Prompt",
+    "chooseResult": "Please select the prize result",
+    "isChoose": "Please check if the currency is not checked",
+    "ishas": "Please check if you have missed the test number",
+    "sureAdd": "Are you sure about the entry?",
+    "sureNext": "Are you sure about the entry next game?",
+    "heji": "Tot",
+    "xiaoji": "Subtotal",
+    "tips1": "Roadmap modified successfully",
+    "face": "Face Val",
+    "vol": "Vol",
+    "type": "Type",
+    "account": "Amount",
+    "status": "Status",
+    "chipIncrease": "Chip increase",
+    "chipReduce": "Chip reduce",
+    "cashIncrease": "Cash increase",
+    "cashReduce": "Cash reduce",
+    "chipgap": "Chip Gap",
+    "correct": "Correct",
+    "incorrect": "Incorrect",
+    "cashGap": "Cash Gap",
+    "totGap": "Tot Gap",
+    "insChip": "Insurance Chip",
+    "insChipAdd": "Ins Chip Increase",
+    "insChipSub": "Ins Chip Reduce",
+    "insGap": "Ins Chip Gap",
+    "chipGet": "Chip collection",
+    "cashGet": "Cash collection",
+    "remark": "Addition/subtraction code modification remarks:",
+    "conChange": "Confirmation of changes",
+    "calculateGap": "Calculate the gap",
+    "ismodiffy": "Are you sure modify?",
+    "sucGet": "Receipt code modified successfully",
+    "sucPoint": "Point chips modification successful",
+    "sucGetCount": "Receipt code calculation gap successful",
+    "sucPointCount": "Point chips calculation gap successful",
+    "chooseStyle": "Currency",
+    "wan": "W",
     "T-money": "T money",
     "fullScreen": "Full screen",
     "choose": "Please choose"
@@ -588,7 +588,17 @@
   "menu-permissions": "menu permissions",
   "expand-collapse": "expand/collapse",
   "all-none": "All/None",
-  "tipsTrans":"Current user cannot export",
-  "less2":"Please select at least 2 members",
-  "game-num-range": "Game No. must greater than 0"
+  "tipsTrans": "Current user cannot export",
+  "less2": "Please select at least 2 members",
+  "game-num-range": "Game No. must greater than 0",
+  "no-dealer": "There is no account for this dealer",
+  "dealer": "Dealer",
+  "dealer-win-loss": "Dealer win/loss",
+  "baccarat-win-loss": "Baccarat win/loss",
+  "dt-win-loss": "DT win/loss",
+  "sg-win-loss": "San-Gong win/loss",
+  "niu-win-loss": "Niu Niu win/loss",
+  "tui-win-loss": "Tui Tong Zi win/loss",
+  "dealer-management": "Dealer management",
+  "dealer-work-number": "Dealer Work No."
 }
