--- a/src/locales/lang/zh.json
+++ b/src/locales/lang/zh.json
@@ -1,81 +1,80 @@
 {
-
   "persino-info": "个人信息",
-  "bet":{
-    "next":"下一局",
-    "user":"当前操作员",
-    "changeAccount":"切换账号",
-    "noScreen":"未投屏",
-    "onScreen":"已投屏",
-    "betRecord":"下注记录",
-    "taiHao":"台号",
-    "xueHao":"靴号",
-    "juHao":"局号",
-    "leiji":"累计",
-    "chip":"筹码",
-    "cash":"现金",
-    "ins":"保险",
-    "z":"庄",
-    "x":"闲",
-    "h":"和",
-    "zd":"庄对",
-    "xd":"闲对",
-    "big":"大",
-    "small":"小",
-    "lucky":"幸运6",
-    "ludan":"路单修改",
-    "zIns":"庄保险",
-    "xIns":"闲保险",
-    "tIns":"和保险",
-    "open":"开牌",
-    "input":"录入",
-    "ponintCode":"点码",
-    "getCode":"收码",
-    "sure":"确定",
-    "cancel":"取消",
-    "payOut":"赔码数",
-    "two":"两张牌",
-    "three":"三张牌",
-    "ischange":"确定切换账号吗？",
-    "tips":"提示",
-    "chooseResult":"请选择开奖结果",
-    "isChoose":"请检查币种是否漏勾选",
-    "ishas":"请检查卡号是否漏填",
-    "sureAdd":"是否确定录入？",
-    "sureNext":"是否确定录入下一局？",
-    "heji":"合计",
-    "xiaoji":"小计",
-    "tips1":"路单图修改成功",
-    "face":"面值",
-    "vol":"数量",
-    "type":"类型",
-    "account":"金额",
-    "status":"状态",
-    "chipIncrease":"筹码增",
-    "chipReduce":"筹码减",
-    "cashIncrease":"现金增",
-    "cashReduce":"现金减",
-    "chipgap":"筹码差距",
-    "correct":"正确",
-    "incorrect":"错误",
-    "cashGap":"现金差距",
-    "totGap":"总差距",
-    "insChip":"保险筹码",
-    "insChipAdd":"保险筹码增",
-    "insChipSub":"保险筹码减",
-    "insGap":"保险筹码差距",
-    "chipGet":"筹码收码",
-    "cashGet":"现金收码",
-    "remark":"增减码修改备注：",
-    "conChange":"确定修改",
-    "calculateGap":"计算差距",
-    "ismodiffy":"是否确定修改？",
-    "sucGet":"收码修改成功",
-    "sucPoint":"点码修改成功",
-    "sucGetCount":"收码计算差距成功",
-    "sucPointCount":"点码计算差距成功",
-    "chooseStyle":"选择币种",
-    "wan":"万",
+  "bet": {
+    "next": "下一局",
+    "user": "当前操作员",
+    "changeAccount": "切换账号",
+    "noScreen": "未投屏",
+    "onScreen": "已投屏",
+    "betRecord": "下注记录",
+    "taiHao": "台号",
+    "xueHao": "靴号",
+    "juHao": "局号",
+    "leiji": "累计",
+    "chip": "筹码",
+    "cash": "现金",
+    "ins": "保险",
+    "z": "庄",
+    "x": "闲",
+    "h": "和",
+    "zd": "庄对",
+    "xd": "闲对",
+    "big": "大",
+    "small": "小",
+    "lucky": "幸运6",
+    "ludan": "路单修改",
+    "zIns": "庄保险",
+    "xIns": "闲保险",
+    "tIns": "和保险",
+    "open": "开牌",
+    "input": "录入",
+    "ponintCode": "点码",
+    "getCode": "收码",
+    "sure": "确定",
+    "cancel": "取消",
+    "payOut": "赔码数",
+    "two": "两张牌",
+    "three": "三张牌",
+    "ischange": "确定切换账号吗？",
+    "tips": "提示",
+    "chooseResult": "请选择开奖结果",
+    "isChoose": "请检查币种是否漏勾选",
+    "ishas": "请检查卡号是否漏填",
+    "sureAdd": "是否确定录入？",
+    "sureNext": "是否确定录入下一局？",
+    "heji": "合计",
+    "xiaoji": "小计",
+    "tips1": "路单图修改成功",
+    "face": "面值",
+    "vol": "数量",
+    "type": "类型",
+    "account": "金额",
+    "status": "状态",
+    "chipIncrease": "筹码增",
+    "chipReduce": "筹码减",
+    "cashIncrease": "现金增",
+    "cashReduce": "现金减",
+    "chipgap": "筹码差距",
+    "correct": "正确",
+    "incorrect": "错误",
+    "cashGap": "现金差距",
+    "totGap": "总差距",
+    "insChip": "保险筹码",
+    "insChipAdd": "保险筹码增",
+    "insChipSub": "保险筹码减",
+    "insGap": "保险筹码差距",
+    "chipGet": "筹码收码",
+    "cashGet": "现金收码",
+    "remark": "增减码修改备注：",
+    "conChange": "确定修改",
+    "calculateGap": "计算差距",
+    "ismodiffy": "是否确定修改？",
+    "sucGet": "收码修改成功",
+    "sucPoint": "点码修改成功",
+    "sucGetCount": "收码计算差距成功",
+    "sucPointCount": "点码计算差距成功",
+    "chooseStyle": "选择币种",
+    "wan": "万",
     "T-money": "和钱",
     "fullScreen": "全屏",
     "choose": "请选择"
@@ -584,7 +583,17 @@
   "menu-permissions": "菜单权限",
   "expand-collapse": "展开/折叠",
   "all-none": "全选/全不选",
-  "tipsTrans":"当前用户不可汇出",
-  "less2":"请选择至少2个会员",
-  "game-num-range": "局号必须大于0"
+  "tipsTrans": "当前用户不可汇出",
+  "less2": "请选择至少2个会员",
+  "game-num-range": "局号必须大于0",
+  "no-dealer": "不存在该荷官账号",
+  "dealer": "荷官",
+  "dealer-win-loss": "荷官上下水",
+  "baccarat-win-loss": "百家乐输赢",
+  "dt-win-loss": "龙虎输赢",
+  "sg-win-loss": "三公输赢",
+  "niu-win-loss": "牛牛输赢",
+  "tui-win-loss": "推筒子输赢",
+  "dealer-management": "荷官管理",
+  "dealer-work-number": "荷官工号"
 }
